--- a/HTML/EN/advanced_search.html
+++ b/HTML/EN/advanced_search.html
@@ -148,6 +148,11 @@
 	<input name="search.album_titlesearch" value="[% search.album_titlesearch.value | html %]" size="[% size %]" maxlength="100" type="text">
 [% END %]
 
+[% WRAPPER field title='WORK' %]
+	[% containsBlock(name='search.work_titlesearch.op') %]
+	<input name="search.work_titlesearch" value="[% search.work_titlesearch.value | html %]" size="[% size %]" maxlength="100" type="text">
+[% END %]
+
 [% WRAPPER field title='RELEASE_TYPE' %]
 	[% containsBlock(name='search.album_release_type.op') %]
 	<input name="search.album_release_type" value="[% search.album_release_type.value | html %]" size="[% size %]" maxlength="100" type="text">
@@ -292,6 +297,7 @@
 			<select name="searchType">
 				<option value="Track">[% "SONGS" | string %]</option>
 				<option [% IF searchType == "Album" %]selected[% END %] value="Album">[% "ALBUMS" | string %]</option>
+				<option [% IF searchType == "Work" %]selected[% END %] value="Work">[% "WORKS" | string %]</option>
 			</select>
 			<input value="[% "CLEAR"  | string %]" name="resetAdvSearch" type="submit">
 		</td>
@@ -315,7 +321,16 @@
 		[% IF allLinks; WRAPPER insertlink %][% PROCESS cmdHRef cmdType='insert' %][% END; END %]
 		[% WRAPPER addlink %][% PROCESS cmdHRef cmdType='add' %][% END %]
 		[% IF allLinks; WRAPPER removelink %][% PROCESS cmdHRef cmdType='remove' %][% END; END %]
-		[% WRAPPER morelink %]href="[% webroot %]clixmlbrowser/clicmd=albuminfo+items&album_id=[% item.itemobj.id %]&amp;linktitle=[% stringINFO %]%20([% item.albumTitle %])/?player=[% playerURI %]" target="browser"[% END %]
+		[% WRAPPER morelink %]href="[% webroot %]clixmlbrowser/clicmd=albuminfo+items&album_id=[% item.itemobj.id %]&amp;linktitle=[% stringINFO %]%20([% item.albumTitle | html %])/?player=[% playerURI %]" target="browser"[% END %]
+	[%- END %]
+
+	[% BLOCK workBrowsecontrols %]
+		[%- header='1' width=cmdLinkIconSize height=cmdLinkIconSize -%]
+		[% PROCESS favoritescontrol %]
+		[% WRAPPER playlink %][% PROCESS cmdHRef cmdType='play' %][% END %]
+		[% IF allLinks; WRAPPER insertlink %][% PROCESS cmdHRef cmdType='insert' %][% END; END %]
+		[% WRAPPER addlink %][% PROCESS cmdHRef cmdType='add' %][% END %]
+		[% IF allLinks; WRAPPER removelink %][% PROCESS cmdHRef cmdType='remove' %][% END; END %]
 	[%- END %]
 
 	[% IF browse_items.size %]
@@ -324,6 +339,9 @@
 			[% IF searchType == 'Album';
 				itemInfoTemplate = 'albuminfo';
 				leftControls = 'albumBrowsecontrols';
+			ELSIF searchType == 'Work';
+				itemInfoTemplate = 'workinfo';
+				leftControls = 'workBrowsecontrols';
 			ELSE;
 				itemInfoTemplate = 'trackinfo';
 				leftControls = 'browsecontrols';
