Fix #1198 - Add support for Perl 5.40 on x86_64 Linux.

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -32,6 +32,7 @@
 	<li>Platform Support:</li>
 	<ul>
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/pull/64">#64</a> - Upgrade Docker base image to Debian 12 (Bookworm) - thanks @mavit!</li>
+		<li><a href="https://github.com/LMS-Community/slimserver/issues/1198">#1198</a> - Add support for Perl 5.40 on x86_64 Linux.</li>
 		<li>Much improved RPM packages to better integrate with system standards (thanks @JohanSaaw!)</li>
 		<li>New macOS integration: replace the preference pane with a menubar item (requires macOS 10.11 El Capitan).</li>
 		<li>Update Windows 64-bit installer to be compatible with new Windows on ARM machines.</li>
