Changelog update and minor tweak to suggested plugins list translation.

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -46,6 +46,7 @@
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1116">#1116</a> - Fix album info track count when there are more than 50 tracks in an album (thanks @darrel-k!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/issues/1138">#1138</a> - "Add all songs" from search not working (thanks @darrel-k!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1146">#1146</a> - Restore partial Cometd support for CLI clients (thanks @sodface!)</li>
+		<li><a href="https://github.com/LMS-Community/slimserver/pull/1203">#1203</a> - Fix display of album roles in the playlist (thanks @darrel-k!)</li>
 	</ul>
 	<br />
 
