--- a/Slim/Plugin/ExtendedBrowseModes/HTML/EN/plugins/ExtendedBrowseModes/settings/browsemodes.html
+++ b/Slim/Plugin/ExtendedBrowseModes/HTML/EN/plugins/ExtendedBrowseModes/settings/browsemodes.html
@@ -74,19 +74,22 @@
 			<tr>
 				<th>[% "PLUGIN_EXTENDED_BROWSEMODES_ROLE" | string %]</th>
 				<th>[% "PLUGIN_EXTENDED_BROWSEMODES_ROLE_TEXT" | string %]</th>
-				<th>[% "PLUGIN_EXTENDED_BROWSEMODES_ROLE_INCLUDE" | string %]</th>
+				<th>[% "PLUGIN_EXTENDED_BROWSEMODES_ROLE_INCLUDE" | string %]&nbsp</th>
+				<th>[% "PLUGIN_EXTENDED_BROWSEMODES_ROLE_ALBUMLINK" | string %]</th>
 			</tr>
 			[% FOREACH tag = customTags.keys.sort %]
 				<tr>
 					<td><input type="text" name="[% tag | html %]_tag" value="[% tag | html %]" class="stdedit"/></td>
 					<td><input type="text" name="[% tag | html %]_name" value="[% customTags.$tag.name | html %]" class="stdedit" style="width: 200px;"/></td>
 					<td style="text-align:center;"><input type="checkbox" [% IF customTags.$tag.include %]checked="1" [% END %] name="[% tag | html %]_include" value="1" class="stdedit" /></td>
+					<td style="text-align:center;"><input type="checkbox" [% IF customTags.$tag.albumLink %]checked="1" [% END %] name="[% tag | html %]_albumLink" value="1" class="stdedit" /></td>
 				</tr>
 			[% END %]
 			<tr>
 				<td><input type="text" name="new_tag" value="" class="stdedit"/></td>
 				<td><input type="text" name="new_name" value="" class="stdedit" style="width: 200px;"/></td>
 				<td style="text-align:center;"><input type="checkbox" name="new_include" class="stdedit" value="1" checked="1"/></td>
+				<td style="text-align:center;"><input type="checkbox" name="new_albumLink" class="stdedit" value="1" checked="1"/></td>
 			</tr>
 		</table>
 	[% END; END %]
