Redesign prefs: put user-defined role options on the My Music page

--- a/HTML/EN/settings/server/behavior.html
+++ b/HTML/EN/settings/server/behavior.html
@@ -12,24 +12,41 @@
 
 	[% IF prefs.pref_useUnifiedArtistsList; WRAPPER settingSection %]
 		[% WRAPPER settingGroup title="SETUP_COMPOSERINARTISTS" desc="SETUP_COMPOSERINARTISTS_DESC" %]
-			<input type="checkbox" [% IF prefs.pref_trackartistInArtists %]checked="1" [% END %] class="stdedit" name="pref_trackartistInArtists" id="trackartistInArtists" value="1" />
-			<label for="trackartistInArtists" class="stdlabel">[% "TRACKARTIST" | string %]</label><br>
-
-			<input type="checkbox" [% IF prefs.pref_composerInArtists %]checked="1" [% END %] class="stdedit" name="pref_composerInArtists" id="composerInArtists" value="1" />
-			<label for="composerInArtists" class="stdlabel">[% "COMPOSER" | string %]</label><br>
-
-			<input type="checkbox" [% IF prefs.pref_conductorInArtists %]checked="1" [% END %] class="stdedit" name="pref_conductorInArtists" id="conductorInArtists" value="1" />
-			<label for="conductorInArtists" class="stdlabel">[% "CONDUCTOR" | string %]</label><br>
-
-			<input type="checkbox" [% IF prefs.pref_bandInArtists %]checked="1" [% END %] class="stdedit" name="pref_bandInArtists" id="bandInArtists" value="1" />
-			<label for="bandInArtists" class="stdlabel">[% "BAND" | string %]</label>
+			<table>
+			[% FOREACH row = menuDefaultRoles.keys.sort %]
+				<tr>
+				[% FOREACH role = menuDefaultRoles.$row %]
+					<td><input type="checkbox" [% IF role.selected %]checked="1" [% END %] class="stdedit" name="pref_[% role.name %]InArtists" id="[% role.name %]InArtists" value="1" />
+					<label for="[% role.name %]InArtists" class="stdlabel">[% role.name | string %]</label></td>
+					<td />
+				[% END %]
+				</tr>
+			[% END %]
+			</table>
 		[% END %]
 	[% END; ELSE %]
-		<input type="hidden" name="pref_trackartistInArtists" value="[% prefs.pref_trackartistInArtists | html %]" />
-		<input type="hidden" name="pref_composerInArtists" value="[% prefs.pref_composerInArtists | html %]" />
-		<input type="hidden" name="pref_conductorInArtists" value="[% prefs.pref_conductorInArtists | html %]" />
-		<input type="hidden" name="pref_bandInArtists" value="[% prefs.pref_bandInArtists | html %]" />
+		[% FOREACH row = menuDefaultRoles.keys.sort %]
+			[% FOREACH role = menuDefaultRoles.$row %]
+				<input type="hidden" name="pref_[% role.name %]InArtists" value="[% role.selected | html %]" />
+			[% END %]
+		[% END %]
 		<input type="hidden" name="pref_variousArtistAutoIdentification" value="[% prefs.pref_variousArtistAutoIdentification | html %]" />
+	[% END %]
+
+	[% WRAPPER settingSection %]
+		[% WRAPPER settingGroup title="SETUP_USERROLESINARTISTS" desc="SETUP_USERROLESINARTISTS_DESC" %]
+			<table>
+			[% FOREACH row = menuUserRoles.keys.sort %]
+				<tr>
+				[% FOREACH role = menuUserRoles.$row %]
+					<td><input type="checkbox" [% IF role.selected %]checked="1" [% END %] class="stdedit" name="pref_[% role.name %]InArtists" id="[% role.name %]InArtists" value="1" />
+					<label for="[% role.name %]InArtists" class="stdlabel">[% role.name | string %]</label></td>
+					<td />
+				[% END %]
+				</tr>
+			[% END %]
+			</table>
+		[% END %]
 	[% END %]
 
 
@@ -59,27 +76,15 @@
 	[% WRAPPER settingSection %]
 		[% WRAPPER settingGroup title="SETUP_ALBUMLINKROLES" desc="SETUP_ALBUMLINKROLES_DESC" %]
 			<table>
+			[% FOREACH row = linkRoles.keys.sort %]
 				<tr>
-					<td><input type="checkbox" [% IF prefs.pref_artistAlbumLink %]checked="1" [% END %] class="stdedit" name="pref_artistAlbumLink" id="artistAlbumLink" value="1" />
-					<label for="artistAlbumLink" class="stdlabel">[% "ARTIST" | string %]</label></td>
+				[% FOREACH role = linkRoles.$row %]
+					<td><input type="checkbox" [% IF role.selected %]checked="1" [% END %] class="stdedit" name="pref_[% role.name %]AlbumLink" id="[% role.name %]AlbumLink" value="1" />
+					<label for="[% role.name %]AlbumLink" class="stdlabel">[% role.name | string %]</label></td>
 					<td />
-					<td><input type="checkbox" [% IF prefs.pref_albumartistAlbumLink %]checked="1" [% END %] class="stdedit" name="pref_albumartistAlbumLink" id="albumartistAlbumLink" value="1" />
-					<label for="albumartistAlbumLink" class="stdlabel">[% "ALBUMARTIST" | string %]</label></td>
+				[% END %]
 				</tr>
-				<tr>
-					<td><input type="checkbox" [% IF prefs.pref_trackartistAlbumLink %]checked="1" [% END %] class="stdedit" name="pref_trackartistAlbumLink" id="trackartistAlbumLink" value="1" />
-					<label for="trackartistAlbumLink" class="stdlabel">[% "TRACKARTIST" | string %]</label></td>
-					<td />
-					<td><input type="checkbox" [% IF prefs.pref_composerAlbumLink %]checked="1" [% END %] class="stdedit" name="pref_composerAlbumLink" id="composerAlbumLink" value="1" />
-					<label for="composerAlbumLink" class="stdlabel">[% "COMPOSER" | string %]</label></td>
-				</tr>
-				<tr>
-					<td><input type="checkbox" [% IF prefs.pref_conductorAlbumLink %]checked="1" [% END %] class="stdedit" name="pref_conductorAlbumLink" id="conductorAlbumLink" value="1" />
-					<label for="conductorAlbumLink" class="stdlabel">[% "CONDUCTOR" | string %]</label></td>
-					<td />
-					<td><input type="checkbox" [% IF prefs.pref_bandAlbumLink %]checked="1" [% END %] class="stdedit" name="pref_bandAlbumLink" id="bandAlbumLink" value="1" />
-					<label for="bandAlbumLink" class="stdlabel">[% "BAND" | string %]</label></td>
-				</tr>
+			[% END %]
 			</table>
 		[% END %]
 	[% END %]
