Move user-defined role setup to Behaviour (My Music)

--- a/HTML/EN/settings/server/behavior.html
+++ b/HTML/EN/settings/server/behavior.html
@@ -1,4 +1,7 @@
 [% PROCESS settings/header.html %]
+
+[% SET numberOfRoleCols = 3 %]
+
 	[% WRAPPER settingSection %]
 		[% WRAPPER settingGroup title="SETUP_ARTISTS_BROWSE_MODES" desc="SETUP_ARTISTS_BROWSE_MODES_DESC" %]
 			<select class="stdedit" name="pref_useUnifiedArtistsList" id="useUnifiedArtistsList">[% prefs.pref_useUnifiedArtistsList %]
@@ -10,93 +13,24 @@
 		[% END %]
 	[% END %]
 
-	[% SET numberOfCols = 3 %]
-
-	[% IF prefs.pref_useUnifiedArtistsList; WRAPPER settingSection %]
-		[% WRAPPER settingGroup title="SETUP_COMPOSERINARTISTS" desc="SETUP_COMPOSERINARTISTS_DESC" %]
-			<table>
-				<tr>
-				[% SET counter = 0 %]
-				[% FOREACH role = menuDefaultRoles %]
+	[% WRAPPER settingSection %]
+		[% WRAPPER settingGroup title="SETUP_ROLESINARTISTS" desc="SETUP_ROLESINARTISTS_DESC" %]
+		<table>
+			<tr>
+			[% SET counter = 0 %]
+			[% FOREACH role = menuRoles %]
+				[% IF !role.hidden %]
 					[% SET counter = counter + 1 %]
 					<td><input type="checkbox" [% IF role.selected %]checked="1" [% END %] class="stdedit" name="pref_[% role.name %]InArtists" id="[% role.name %]InArtists" value="1" />
 					<label for="[% role.name %]InArtists" class="stdlabel">[% role.name | string %]</label></td>
 					<td />
-					[% IF counter % numberOfCols == 0 %] </tr><tr> [% END %]
+					[% IF counter % numberOfRoleCols == 0 %] </tr><tr> [% END %]
+				[% ELSE %]
+					<input type="hidden" name="pref_[% role.name %]InArtists" value="[% role.selected | html %]" />
 				[% END %]
-				</tr>
-			</table>
-		[% END %]
-	[% END; ELSE %]
-		[% FOREACH role = menuDefaultRoles %]
-			<input type="hidden" name="pref_[% role.name %]InArtists" value="[% role.selected | html %]" />
-		[% END %]
-		<input type="hidden" name="pref_variousArtistAutoIdentification" value="[% prefs.pref_variousArtistAutoIdentification | html %]" />
-	[% END %]
-	<script type="text/javascript">
-	function showUdrEditor(status, options) {
-		var options = document.getElementById(options);
-		options.style.display = options.style.display == 'block' ? 'none' : 'block';
-		status.textContent = options.style.display == 'block' ? 'Hide user-defined roles' : 'Edit user-defined roles';
-	}
-	</script>
-	[% WRAPPER settingSection %]
-		[% WRAPPER settingGroup title="SETUP_USERROLESINARTISTS" desc="SETUP_USERROLESINARTISTS_DESC" %]
-			<table>
-				<tr>
-				[% SET counter = 0 %]
-				[% FOREACH role = menuUserRoles %]
-					[% SET counter = counter + 1 %]
-					<td><input type="checkbox" [% IF role.selected %]checked="1" [% END %] class="stdedit" name="pref_[% role.name %]InArtists" id="[% role.name %]InArtists" value="1" />
-					<label for="[% role.name %]InArtists" class="stdlabel">[% role.name | string %]</label></td>
-					<td />
-					[% IF counter % numberOfCols == 0 %] </tr><tr> [% END %]
-				[% END %]
-				</tr>
-			</table>
-			<button name="editudr" type="button" onclick="showUdrEditor(this,'udrEditor')" >[% IF !keepCustomRolesOpen && !doRescanNow %]Edit [% ELSE %]Hide [% END %]user-defined roles</button>
-			<div id="udrEditor" [% IF !keepCustomRolesOpen && !doRescanNow %]hidden[% END %]>
-				<table>
-					<tr>
-						<th>[% "PLUGIN_EXTENDED_BROWSEMODES_ROLE" | string %]</th>
-						<th>[% "PLUGIN_EXTENDED_BROWSEMODES_ROLE_TEXT" | string %]</th>
-					</tr>
-					[% FOREACH tag = customTags.keys.sort %]
-						<tr>
-							<td><input type="text" name="[% tag | html %]_tag" value="[% tag | html %]" class="stdedit"/></td>
-							<td><input type="text" name="[% tag | html %]_name" value="[% customTags.$tag.name | html %]" class="stdedit" style="width: 200px;"/></td>
-						</tr>
-					[% END %]
-					<tr>
-						<td><input type="text" name="new_tag" value="" class="stdedit"/></td>
-						<td><input type="text" name="new_name" value="" class="stdedit" style="width: 200px;"/></td>
-					</tr>
-				</table>
-			</div>
-		[% END %]
-	[% END %]
-
-
-	[% WRAPPER settingSection %]
-		[% IF prefs.pref_useUnifiedArtistsList %]
-			[% WRAPPER settingGroup title="SETUP_VARIOUSARTISTS" desc="SETUP_VARIOUSARTISTAUTOIDENTIFICATION_DESC"%]
-				<input type="radio" name="pref_variousArtistAutoIdentification" id="pref_variousArtistAutoIdentification0" value="0" [% IF NOT prefs.pref_variousArtistAutoIdentification %]checked="checked"[% END %] />
-				<label for="pref_variousArtistAutoIdentification0" class="stdlabel">[% 'SETUP_VARIOUSARTISTAUTOIDENTIFICATION_0' | getstring %]</label><br/>
-				<input type="radio" name="pref_variousArtistAutoIdentification" id="pref_variousArtistAutoIdentification1" value="1" [% IF prefs.pref_variousArtistAutoIdentification %]checked="checked"[% END %] />
-				<label for="pref_variousArtistAutoIdentification1" class="stdlabel">[% 'SETUP_VARIOUSARTISTAUTOIDENTIFICATION_1' | getstring %]</label>
 			[% END %]
-		[% END %]
-
-		[% WRAPPER settingGroup title="" desc="SETUP_USETPE2ASALBUMARTIST_DESC"%]
-			<input type="radio" name="pref_useTPE2AsAlbumArtist" id="pref_useTPE2AsAlbumArtist0" value="0" [% IF NOT prefs.pref_useTPE2AsAlbumArtist %]checked="checked"[% END %] />
-			<label for="pref_useTPE2AsAlbumArtist0" class="stdlabel">[% 'SETUP_USETPE2ASALBUMARTIST_0' | getstring %]</label><br/>
-			<input type="radio" name="pref_useTPE2AsAlbumArtist" id="pref_useTPE2AsAlbumArtist1" value="1" [% IF prefs.pref_useTPE2AsAlbumArtist %]checked="checked"[% END %] />
-			<label for="pref_useTPE2AsAlbumArtist1" class="stdlabel">[% 'SETUP_USETPE2ASALBUMARTIST_1' | getstring %]</label><br/>
-		[% END %]
-
-		[% WRAPPER settingGroup title="" desc=""%]
-			<div class="prefDesc">[% "SETUP_VARIOUSARTISTSSTRING_DESC" | string %]</div>
-			<input type="text"class="stdedit" name="pref_variousArtistsString" id="variousArtistsString" value="[% prefs.pref_variousArtistsString | html %]" size="40" placeholder="[% "VARIOUSARTISTS" | string | html %]">
+			</tr>
+		</table>
 		[% END %]
 	[% END %]
 
@@ -110,10 +44,56 @@
 					<td><input type="checkbox" [% IF role.selected %]checked="1" [% END %] class="stdedit" name="pref_[% role.name %]AlbumLink" id="[% role.name %]AlbumLink" value="1" />
 					<label for="[% role.name %]AlbumLink" class="stdlabel">[% role.name | string %]</label></td>
 					<td />
-					[% IF counter % numberOfCols == 0 %] </tr><tr> [% END %]
+					[% IF counter % numberOfRoleCols == 0 %] </tr><tr> [% END %]
 				[% END %]
 				</tr>
 			</table>
+		[% END %]
+	[% END %]
+
+	[% WRAPPER settingSection %]
+		[% WRAPPER settingGroup title="SETUP_USERDEFINEDROLES" desc="SETUP_USERDEFINEDROLES_DESC" %]
+			<table>
+				<tr>
+					<th>[% "SETUP_USERDEFINEDROLES_TAG" | string %]</th>
+					<th>[% "SETUP_USERDEFINEDROLES_TEXT" | string %]</th>
+				</tr>
+				[% FOREACH tag = customTags.keys.sort %]
+					<tr>
+						<td><input type="text" name="[% tag | html %]_tag" value="[% tag | html %]" class="stdedit"/></td>
+						<td><input type="text" name="[% tag | html %]_name" value="[% customTags.$tag.name | html %]" class="stdedit" style="width: 200px;"/></td>
+					</tr>
+				[% END %]
+				<tr>
+					<td><input type="text" name="new_tag" value="" class="stdedit"/></td>
+					<td><input type="text" name="new_name" value="" class="stdedit" style="width: 200px;"/></td>
+				</tr>
+			</table>
+		[% END %]
+	[% END %]
+
+	[% WRAPPER settingSection %]
+		[% IF prefs.pref_useUnifiedArtistsList %]
+			[% WRAPPER settingGroup title="SETUP_VARIOUSARTISTS" desc="SETUP_VARIOUSARTISTAUTOIDENTIFICATION_DESC"%]
+				<input type="radio" name="pref_variousArtistAutoIdentification" id="pref_variousArtistAutoIdentification0" value="0" [% IF NOT prefs.pref_variousArtistAutoIdentification %]checked="checked"[% END %] />
+				<label for="pref_variousArtistAutoIdentification0" class="stdlabel">[% 'SETUP_VARIOUSARTISTAUTOIDENTIFICATION_0' | getstring %]</label><br/>
+				<input type="radio" name="pref_variousArtistAutoIdentification" id="pref_variousArtistAutoIdentification1" value="1" [% IF prefs.pref_variousArtistAutoIdentification %]checked="checked"[% END %] />
+				<label for="pref_variousArtistAutoIdentification1" class="stdlabel">[% 'SETUP_VARIOUSARTISTAUTOIDENTIFICATION_1' | getstring %]</label>
+			[% END %]
+		[% ELSE %]
+			<input type="hidden" name="pref_variousArtistAutoIdentification" value="[% prefs.pref_variousArtistAutoIdentification | html %]" />
+		[% END %]
+
+		[% WRAPPER settingGroup title= prefs.pref_useUnifiedArtistsList ? "" : "SETUP_VARIOUSARTISTS"; desc=""%]
+			<div class="prefDesc">[% "SETUP_VARIOUSARTISTSSTRING_DESC" | string %]</div>
+			<input type="text"class="stdedit" name="pref_variousArtistsString" id="variousArtistsString" value="[% prefs.pref_variousArtistsString | html %]" size="40" placeholder="[% "VARIOUSARTISTS" | string | html %]">
+		[% END %]
+
+		[% WRAPPER settingGroup title="MP3" desc="SETUP_USETPE2ASALBUMARTIST_DESC"%]
+			<input type="radio" name="pref_useTPE2AsAlbumArtist" id="pref_useTPE2AsAlbumArtist0" value="0" [% IF NOT prefs.pref_useTPE2AsAlbumArtist %]checked="checked"[% END %] />
+			<label for="pref_useTPE2AsAlbumArtist0" class="stdlabel">[% 'SETUP_USETPE2ASALBUMARTIST_0' | getstring %]</label><br/>
+			<input type="radio" name="pref_useTPE2AsAlbumArtist" id="pref_useTPE2AsAlbumArtist1" value="1" [% IF prefs.pref_useTPE2AsAlbumArtist %]checked="checked"[% END %] />
+			<label for="pref_useTPE2AsAlbumArtist1" class="stdlabel">[% 'SETUP_USETPE2ASALBUMARTIST_1' | getstring %]</label><br/>
 		[% END %]
 	[% END %]
 
