--- a/Changelog9.html
+++ b/Changelog9.html
@@ -18,6 +18,8 @@
 	<li>Platform Support:</li>
 	<ul>
 		<li>Make Docker a first class citizan: add Slim::Utils::OS::Docker insted of a Custom.pm</li>
+		<li>Remove Win32 legacy support files, code, control panels, build pipeline, etc.</li>
+		<li>Remove legacy Mac installer from build pipeline.</li>
 	</ul>
 	<br />
 
