--- a/Changelog9.html
+++ b/Changelog9.html
@@ -21,9 +21,10 @@
 	<ul>
 		<li>Added Hungarian translations - thanks @ambrits!</li>
 		<li>Updated Czech translation - thanks @mipa87!</li>
+		<li>Updated Danish translation - thanks @cfuttrup!</li>
 		<li>Updated French translation - thanks @Franck-Berry!</li>
 		<li>Updated Portuguese translation - thanks @DuLac!</li>
-		<li>Improve Plugin Manager: add categories, icons, search, nicer UX.</li>
+		<li>Improved Plugin Manager: add categories, icons, and search.</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1124">#1124</a> - Return 'Random Mix' state in player status message (thanks @CraigD!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1144">#1144</a> - Remove unnecessary delay reporting volume changes (thanks @SamInPgh!)</li>
 	</ul>
@@ -31,12 +32,13 @@
 
 	<li>Platform Support:</li>
 	<ul>
+		<li>Replace the macOS Preference Pane with a menubar item (requires macOS 10.11 El Capitan).</li>
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/pull/64">#64</a> - Upgrade Docker base image to Debian 12 (Bookworm) - thanks @mavit!</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/issues/1198">#1198</a> - Add support for Perl 5.40 on x86_64 Linux.</li>
 		<li>Much improved RPM packages to better integrate with system standards (thanks @JohanSaaw!)</li>
-		<li>New macOS integration: replace the preference pane with a menubar item (requires macOS 10.11 El Capitan).</li>
 		<li>Update Windows 64-bit installer to be compatible with new Windows on ARM machines.</li>
 		<li>Updated Audio::Scan to v1.09 on Windows 32-bit, v1.10 on Windows 64-bit and Linux Perl 5.36/5.38 - thanks @ralphy!</li>
+		<li>Dropped support for Windows 32-bit and macOS &lt; 10.11.</li>
 	</ul>
 	<br />
 
