--- a/Changelog9.html
+++ b/Changelog9.html
@@ -22,6 +22,7 @@
 		<li>Added Hungarian translations - thanks @ambrits!</li>
 		<li>Updated Czech translation - thanks @mipa87!</li>
 		<li>Updated Danish translation - thanks @cfuttrup!</li>
+		<li>Updated Dutch translation - thanks @terual!</li>
 		<li>Updated French translation - thanks @Franck-Berry!</li>
 		<li>Updated Portuguese translation - thanks @DuLac!</li>
 		<li>Improved Plugin Manager: add categories, icons, and search.</li>
