Fix #1228 Allow users to define how many HTTP requests to follow.

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -14,6 +14,7 @@
 		<li><a href="https://github.com/LMS-Community/slimserver/issues/1095">#1095</a> - Link from online tracks and albums to local library (if possible).</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1115">#1115</a> - Add option to show tracks from a given year, even if their album would be listed in a different year.</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1132">#1132</a> - Allow user defined contributor roles (thanks @darrel-k!).</li>
+		<li><a href="https://github.com/LMS-Community/slimserver/issues/1228">#1228</a> - Allow user to define how many HTTP requests to follow.</li>
 	</ul>
 	<br />
 
