--- a/HTML/EN/settings/server/networking.html
+++ b/HTML/EN/settings/server/networking.html
@@ -7,6 +7,10 @@
 		<input type="text"class="stdedit" name="pref_httpport" id="httpport" value="[% prefs.pref_httpport | html %]" size="15">
 	[% END %]
 
+	[% WRAPPER setting title="SETUP_MAX_REDIRECTS" desc="SETUP_MAX_REDIRECTS_DESC" %]
+		<input type="text"class="stdedit sliderInput_0_20_1" name="pref_maxRedirects" id="maxRedirects" value="[% prefs.pref_maxRedirects | html %]" size="15">
+	[% END %]
+
 	[% WRAPPER settingSection %]
 		[% WRAPPER settingGroup title="SETUP_BUFFERSECS" desc="SETUP_BUFFERSECS_DESC" %]
 			<input type="text"class="stdedit sliderInput_3_30_1" name="pref_bufferSecs" id="bufferSecs" value="[% prefs.pref_bufferSecs | html %]" size="15">
