Unify filtering for content types to make things more readable.
Update Changelog.

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -52,6 +52,7 @@
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1146">#1146</a> - Restore partial Cometd support for CLI clients (thanks @sodface!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1203">#1203</a> - Fix display of album roles in the playlist (thanks @darrel-k!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/issues/1213">#1213</a> - Modify #CURRTRACK to first track when playlist finishes</li>
+		<li><a href="https://github.com/LMS-Community/slimserver/pull/1229">#1229</a> - Only allow audio tracks for RandomPlay (thanks @jbylsma!)</li>
 	</ul>
 	<br />
 
