--- a/Changelog9.html
+++ b/Changelog9.html
@@ -59,6 +59,7 @@
 	<li>Other:</li>
 	<ul>
 		<li>Move CLI documentation out of the server code to <a href="https://lyrion.org/reference/cli/introduction/">lyrion.org</a>.</li>
+		<li>Allow a caller (plugin) of Slim::Networking::SimpleAsyncHTTP to disable HTTPS certificate validation.</li>
 	</ul>
 	<br />
 </ul>
