--- a/Changelog9.html
+++ b/Changelog9.html
@@ -1,4 +1,38 @@
-<h2><a name="v9.0.0" id="v9.0.0"></a>Introducing... Lyrion Music Server Version 9.0.0!</h2>
+<h2><a name="v9.0.1" id="v9.0.1"></a>Version 9.0.1</h2>
+<ul>
+	<li>New Features:</li>
+	<ul>
+		<li></li>
+	</ul>
+	<br />
+
+	<li>Server Changes:</li>
+	<ul>
+		<li></li>
+	</ul>
+	<br />
+
+	<li>Platform Support:</li>
+	<ul>
+		<li></li>
+	</ul>
+	<br />
+
+	<li>Bug Fixes:</li>
+	<ul>
+		<li></li>
+	</ul>
+	<br />
+
+	<li>Other:</li>
+	<ul>
+		<li></li>
+	</ul>
+	<br />
+</ul>
+
+
+<h2><a name="v9.0.0" id="v9.0.0"></a>Introducing... Lyrion Music Server Version 9.0.0! - 2024-11-29 (2ed5e147e)</h2>
 <ul>
 	<li><a href="Changelog8.html">Upstream fixes from Logitech Media Server 8.5.x</a></li>
 	<br />
