--- a/Changelog9.html
+++ b/Changelog9.html
@@ -17,7 +17,7 @@
 
 	<li>Platform Support:</li>
 	<ul>
-		<li></li>
+		<li>Make Docker a first class citizan: add Slim::Utils::OS::Docker insted of a Custom.pm</li>
 	</ul>
 	<br />
 
