--- a/Changelog9.html
+++ b/Changelog9.html
@@ -8,7 +8,7 @@
 
 	<li>Server Changes:</li>
 	<ul>
-		<li></li>
+		<li>Analytics: only check asmall, well defined list of pref changes to decide whether a disconnected player had been active recently.</li>
 	</ul>
 	<br />
 
