--- a/HTML/EN/settings/server/behavior.html
+++ b/HTML/EN/settings/server/behavior.html
@@ -104,6 +104,13 @@
 			<input type="radio" name="pref_useTPE2AsAlbumArtist" id="pref_useTPE2AsAlbumArtist1" value="1" [% IF prefs.pref_useTPE2AsAlbumArtist %]checked="checked"[% END %] />
 			<label for="pref_useTPE2AsAlbumArtist1" class="stdlabel">[% 'SETUP_USETPE2ASALBUMARTIST_1' | getstring %]</label><br/>
 		[% END %]
+
+		[% WRAPPER settingGroup title="SETUP_WORKSSCANONLYCLASSICAL" desc="" %]
+			<input type="radio" name="pref_worksScanOnlyClassical" id="pref_worksScanOnlyClassical0" value="0" [% IF NOT prefs.pref_worksScanOnlyClassical %]checked="checked"[% END %] />
+			<label for="pref_worksScanOnlyClassical0" class="stdlabel">[% 'SETUP_WORKSSCANONLYCLASSICAL_0' | getstring %]</label><br/>
+			<input type="radio" name="pref_worksScanOnlyClassical" id="pref_worksScanOnlyClassical1" value="1" [% IF prefs.pref_worksScanOnlyClassical %]checked="checked"[% END %] />
+			<label for="pref_worksScanOnlyClassical1" class="stdlabel">[% 'SETUP_WORKSSCANONLYCLASSICAL_1' | getstring %]</label><br/>
+		[% END %]
 	[% END %]
 
 	[% WRAPPER settingSection %]
