--- a/Changelog9.html
+++ b/Changelog9.html
@@ -17,6 +17,7 @@
 
 	<li>Platform Support:</li>
 	<ul>
+		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/74">#74</a> - Speed up Perl installation during an initial installation on Windows.</li>
 		<li>Make Docker a first class citizan: add Slim::Utils::OS::Docker insted of a Custom.pm</li>
 		<li>Remove Win32 legacy support files, code, control panels, build pipeline, etc.</li>
 		<li>Remove legacy Mac installer from build pipeline.</li>
