--- a/Changelog9.html
+++ b/Changelog9.html
@@ -14,7 +14,7 @@
 
 	<li>Platform Support:</li>
 	<ul>
-		<li></li>
+		<li>Fix helper search path initialisation on older macOS using Perl 5.18.</li>
 	</ul>
 	<br />
 
