--- a/Changelog9.html
+++ b/Changelog9.html
@@ -24,6 +24,7 @@
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1235">#1235</a> - Need to utf8Decode album title for new &amp; changed (thanks @darrel-k!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1237">#1237</a> - Fix create table syntax for MySQL (MariaDB) (thanks @JKDingwall!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1238">#1238</a> - Merge multiple works per track into one single work (thanks @darrel-k!)</li>
+		<li><a href="https://github.com/LMS-Community/slimserver/pull/1242">#1242</a> - Fix plugin download - must wait for the download to finish before restarting the server</li>
 	</ul>
 	<br />
 
