--- a/Changelog9.html
+++ b/Changelog9.html
@@ -15,6 +15,7 @@
 	<li>Platform Support:</li>
 	<ul>
 		<li>Fix helper search path initialisation on older macOS using Perl 5.18.</li>
+		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/74">#74</a> - Speed up Perl installation during an initial installation on Windows.</li>
 	</ul>
 	<br />
 
@@ -24,7 +25,7 @@
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1235">#1235</a> - Need to utf8Decode album title for new &amp; changed (thanks @darrel-k!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1237">#1237</a> - Fix create table syntax for MySQL (MariaDB) (thanks @JKDingwall!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1238">#1238</a> - Merge multiple works per track into one single work (thanks @darrel-k!)</li>
-		<li><a href="https://github.com/LMS-Community/slimserver/pull/1242">#1242</a> - Fix plugin download - must wait for the download to finish before restarting the server</li>
+		<li><a href="https://github.com/LMS-Community/slimserver/issues/1242">#1242</a> - Fix plugin download - must wait for the download to finish before restarting the server</li>
 	</ul>
 	<br />
 
