--- a/Changelog9.html
+++ b/Changelog9.html
@@ -16,6 +16,7 @@
 	<ul>
 		<li>Fix helper search path initialisation on older macOS using Perl 5.18.</li>
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/74">#74</a> - Speed up Perl installation during an initial installation on Windows.</li>
+		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/75">#75</a> - Make sure newly installed LMS on Windows is running before sending the user to the web page.</li>
 	</ul>
 	<br />
 
