Show/Hide "Abort scan" link at the beginning/end of a scan (Classic/EN/Material skins)

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -17,7 +17,9 @@
 		<li>Fix helper search path initialisation on older macOS using Perl 5.18.</li>
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/74">#74</a> - Speed up Perl installation during an initial installation on Windows.</li>
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/75">#75</a> - Make sure newly installed LMS on Windows is running before sending the user to the web page.</li>
+		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/77">#77</a> - Add instructions to the macOS DMG file.</li>
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/78">#78</a> - Fix crypto library linking issues in the Docker image.</li>
+		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/80">#80</a> - Reset update status when updating fromt he macOS menu bar item.</li>
 	</ul>
 	<br />
 
@@ -30,6 +32,7 @@
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1238">#1238</a> - Merge multiple works per track into one single work (thanks @darrel-k!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1240">#1240</a> - Add option to limit works scanning to classical genre(s) (thanks @darrel-k!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/issues/1242">#1242</a> - Fix plugin download - must wait for the download to finish before restarting the server</li>
+		<li><a href="https://github.com/LMS-Community/slimserver/issues/1247">#1247</a> - Fix display of final "Scan done" message and "Abort scan" link in Material/Classic skins.</li>
 	</ul>
 	<br />
 
