--- a/Changelog9.html
+++ b/Changelog9.html
@@ -31,7 +31,7 @@
 
 	<li>Other:</li>
 	<ul>
-		<li></li>
+		<li><a href="https://github.com/LMS-Community/slimserver/pull/1245">#1245</a> - Added a Simple WebSocket client capability for 3rd Party Plugins to support this protocol (expectingtofly)</li>
 	</ul>
 	<br />
 </ul>
