Try to prevent artist ID re-use on full wipe & rescans. This caused issues with artist artwork rendering when an artist got an ID which previously was used by some other artist.

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -9,6 +9,7 @@
 	<li>Server Changes:</li>
 	<ul>
 		<li>Analytics: only check a small, well defined list of pref changes to decide whether a disconnected player had been active recently.</li>
+		<li>Initialize autoincrement start value for contributors table to prevent ID re-use on full wipe &amp; rescans.</li>
 	</ul>
 	<br />
 
