More cleanup of defunct picture/video scanning. The removed `images` table caused scans to wipe all the database.

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -11,7 +11,7 @@
 
 	<li>Server Changes:</li>
 	<ul>
-		<li></li>
+		<li>Remove left-overs from removed picture/video scanning.</li>
 	</ul>
 	<br />
 
