--- a/Changelog9.html
+++ b/Changelog9.html
@@ -11,7 +11,7 @@
 
 	<li>Server Changes:</li>
 	<ul>
-		<li>Remove left-overs from removed picture/video scanning.</li>
+		<li>Remove more left-overs from removed picture/video scanning.</li>
 	</ul>
 	<br />
 
