Add missing changelog entry.

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -32,6 +32,7 @@
 	<li>Other:</li>
 	<ul>
 		<li><a href="https://github.com/LMS-Community/slimserver/pull/1245">#1245</a> - Added a Simple WebSocket client capability for 3rd Party Plugins to support this protocol (expectingtofly)</li>
+		<li><a href="https://github.com/LMS-Community/slimserver/issues/1264">#1246</a> - Windows registry value "DataPath" is in the wrong place.</li>
 	</ul>
 	<br />
 </ul>
