Fix #1267 Provide an easy way for Boom/Classic/Transporter users to install the Date and Time screensaver.
The plugin is no longer enabled by default, leaving some Classic etc. users wondering why there's no clock display available.

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -2,7 +2,7 @@
 <ul>
 	<li>New Features:</li>
 	<ul>
-		<li></li>
+		<li><a href="https://github.com/LMS-Community/slimserver/issues/1267">#1267</a> - Provide easy installation of Date and Time screensaver for Classic/Boom/Transporter users.</li>
 	</ul>
 	<br />
 
