Update Changelog - need to bump the revision in order to pick up changes in the platform repository.

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -23,6 +23,7 @@
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/77">#77</a> - Add instructions to the macOS DMG file. Improve overall user experience.</li>
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/78">#78</a> - Fix crypto library linking issues in the Docker image.</li>
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/issues/80">#80</a> - Reset update status when updating fromt he macOS menu bar item.</li>
+		<li>Have a newly installed LMS use "Lyrion" as the data path, rather than "Squeezebox".</li>
 	</ul>
 	<br />
 
