Another changelog update...

--- a/Changelog9.html
+++ b/Changelog9.html
@@ -38,6 +38,7 @@
 		<li><a href="https://github.com/LMS-Community/slimserver/issues/1242">#1242</a> - Fix plugin download - must wait for the download to finish before restarting the server</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/issues/1247">#1247</a> - Fix display of final "Scan done" message and "Abort scan" link in Material/Classic skins.</li>
 		<li><a href="https://github.com/LMS-Community/slimserver/issues/1250">#1250</a> - Radio stations wouldn't show album artwork any more.</li>
+		<li><a href="https://github.com/LMS-Community/slimserver/issues/1264">#1246</a> - Windows registry value "DataPath" is in the wrong place.</li>
 	</ul>
 	<br />
 
