--- a/Changelog9.html
+++ b/Changelog9.html
@@ -20,6 +20,7 @@
 		<li>Make Docker a first class citizan: add Slim::Utils::OS::Docker insted of a Custom.pm</li>
 		<li>Remove Win32 legacy support files, code, control panels, build pipeline, etc.</li>
 		<li>Remove legacy Mac installer from build pipeline.</li>
+		<li>Remove code dealing with Perl &lt; 5.10.</li>
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/pull/85">#85</a> - Change permissions of user running LMS in Docker. Use "squeezeboxserver" group instead of "nogroup" (thanks @osnieh!)</li>
 		<li><a href="https://github.com/LMS-Community/slimserver-platforms/pull/73">#73</a> - Add a note about setting the hostname in a Docker container (thanks @hartzell!)</li>
 	</ul>
